--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
